--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ authors = ["杜 世橋 Du Shiqiao <lucidfrontier.45@gmail.com>"]
 anyhow = "1.0.89"
 ndarray = "0.16.1"
 ordered-float = "4.3.0"
+rand = "0.8.5"
